# Fixed a issue
- Fixed the issue that rect doesn't fit when resize

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,6 +6,10 @@
     
 }
 canvas[resize] {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+}
+html,body,canvas {
+    width: 100vw;
+    height: 100vh;
 }
